# ai-document-indexer-mcp

./: .gitignore  README.md  pyproject.toml  run.cmd
docker/: Dockerfile  compose.cuda.yml  compose.rocm.yml  compose.yml
src/: ingestion.py  server.py  startup.py
