[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-document-indexer-mcp"
version = "0.1.0"
description = "MCP server that indexes documents from a Git repository for AI consumption."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "chromadb>=0.5.0",
    "fastembed>=0.4.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "llama-index-core>=0.11.0",
    "llama-index-embeddings-fastembed>=0.3.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
gpu = [
    "fastembed-gpu>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
